LWJGL3, Java 14, Movable refactor